# stp-maintenance-log

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py
app/i18n/: de.json  en.json
app/models/: __init__.py  activity.py  asset.py  asset_event.py  maintenance.py  measurement.py  measurement_parameter.py  pipe.py  user.py
app/routers/: account.py  admin.py  assets.py  auth.py  dashboard.py  entries.py  map.py  measurements.py  plant.py  search.py
app/services/: __init__.py  activities.py  asset_events.py  backup.py  charts.py  i18n.py  maintenance_schedule.py  measurements.py  pdf_export.py  ratelimit.py  report.py  security.py  storage.py  templating.py  twofa.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: account.html  account_2fa_codes.html  account_2fa_setup.html  base.html  dashboard.html  error.html  macros.html  map.html  plant.html  search.html
app/templates/admin/: backup.html  users.html
app/templates/assets/: form.html  list.html
app/templates/auth/: login.html  twofa.html
app/templates/entries/: form.html  list.html
app/templates/measurements/: charts.html  form.html  list.html  parameters.html
deploy/: install.sh  nginx.conf.example  proxmox-create-lxc.sh  stp-maintenance.service  update.sh
docs/screenshots/: .gitkeep
tests/: test_smoke.py
