[project]
name = "stp-maintenance-log"
version = "0.3.0"
description = "Sewage Treatment Plant Maintenance Log — FastAPI web app"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "B008",   # FastAPI uses function calls (Depends/Form/File) in defaults by design
    "UP042",  # str+Enum is intentional (stable string values for JSON/DB/compare)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests set env vars before importing the app on purpose

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
